--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Frontend Developer</title>
+  <title>Ephraim Djeket | Frontend Developer</title>
   <link rel="stylesheet" href="style.css">
   <script src="index.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -38,32 +38,32 @@
 
     <div class="cards">
       <div class="card">
-        <img src="project1.jpg" alt="">
-        <h4>Semester Project 2</h4>
+        <img src="img/Screenshot 2026-03-01 001348.png" alt="E-commerce storefront">
+        <h4>Vaultbid - Semester Project 2</h4>
         <p>E-commerce storefront built with modern frontend practices.</p>
         <div class="links">
-          <a href="#">GitHub</a>
-          <a href="#">Live Site</a>
+          <a href="https://github.com/ephraimdjeket/VaultBid-SP2" target="_blank">GitHub</a>
+          <a href="https://coruscating-horse-1cb74a.netlify.app/" target="_blank">Live Site</a>
         </div>
       </div>
 
       <div class="card">
-        <img src="project2.jpg" alt="">
-        <h4>JavaScript Frameworks CA</h4>
+        <img src="img/Screenshot 2026-03-01 000906.png" alt="React-based application">
+        <h4>Lumen eCom - JavaScript Frameworks</h4>
         <p>React-based application using API integration and routing.</p>
         <div class="links">
-          <a href="#">GitHub</a>
-          <a href="#">Live Site</a>
+          <a href="https://github.com/ephraimdjeket/lumen-eCom-store" target="_blank">GitHub</a>
+          <a href="https://lumen-e-com-store.vercel.app/" target="_blank">Live Site</a>
         </div>
       </div>
 
       <div class="card">
-        <img src="project3.jpg" alt="">
-        <h4>Project Exam 2</h4>
+        <img src="img/Screenshot 2026-03-01 001714.png" alt="Housing rental platform">
+        <h4>Holidaze - Project Exam 2</h4>
         <p>Housing rental platform with authentication and search features.</p>
         <div class="links">
-          <a href="#">GitHub</a>
-          <a href="#">Live Site</a>
+          <a href="https://github.com/ephraimdjeket/Holidaze">GitHub</a>
+          <a href="https://gregarious-marshmallow-0479aa.netlify.app/home" target="_blank">Live Site</a>
         </div>
       </div>
     </div>
